force-app/main/default/objects/accessnow__ACNW_Request_Permission__c/accessnow__ACNW_Request_Permission__c.object-meta.xml
<CustomObject>
    <label>Request Permission</label>
    <nameField>
        <displayFormat>RP-{0000000}</displayFormat>
        <label>Request Permission Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>