force-app/main/default/objects/accessnow__ACNW_Request_Permission__c/fields/accessnow__Request__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Request__c</fullName>
    <label>Request</label>
    <referenceTo>accessnow__ACNW_Request__c</referenceTo>
    <relationshipLabel>Request Permissions</relationshipLabel>
    <relationshipName>Request_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>