force-app/main/default/objects/accessnow__ACNW_Request_Permission__c/fields/accessnow__Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Requires_Approval__c</fullName>
    <formula>IF(accessnow__User_Permission__r.accessnow__Permission__r.accessnow__Approval_relavent__c = True, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approval requires - 1, Approval not required = 0</inlineHelpText>
    <label>Requires Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>