force-app/main/default/objects/accessnow__ACNW_Request_Permission__c/fields/accessnow__Requires_Approval_Value__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Requires_Approval_Value__c</fullName>
    <description>Requires Approval value</description>
    <inlineHelpText>Has value of the formula field &quot;Requires Approval&quot;</inlineHelpText>
    <label>Requires Approval Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>