force-app/main/default/objects/accessnow__ACNW_Request_Permission__c/fields/accessnow__User_Permission__c.field-meta.xml
<CustomField>
    <fullName>accessnow__User_Permission__c</fullName>
    <label>User Permission</label>
    <referenceTo>accessnow__ACNW_User_Permission__c</referenceTo>
    <relationshipLabel>Request Permissions</relationshipLabel>
    <relationshipName>Request_Permissions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>